# Caresoft

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  init_db.py  pyproject.toml  requirements.txt
Mannuals/: POETRY_MIGRATION.md  README_DATABASE.md  TEAM_SETUP_GUIDE.md
Working_Mannuals /: PRE_PUSH_CHECKLIST.md  README.md  README_DATABASE.md  READY_FOR_TEAM.md  TEAM_SETUP_GUIDE.md
app/: crud.py  database.py  main.py  models.py
static/css/: styles.css
static/js/: app.js
templates/: cache_test.html  index.html
