[tool.poetry]
name = "caresoft"
version = "1.0.0"
description = "Automotive Cost Estimation Platform with PostgreSQL Integration"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
jinja2 = "^3.1.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
